(library
 (name auto_documentation)
 (modules ))

(library
 (name feature_update)
 (modules feature_update)
 )

(library
 (name feature_tree)
 (modules feature_tree)
 (libraries feature_update ds_utils))

(library
 (name ds_utils)
 (modules ds_utils)
 (libraries pretty_print))

(library
 (name pretty_print)
 (modules pretty_print)
 )

(library
 (name code_tree)
 (modules code_tree)
 (libraries feature_tree))

(library
 (name cli_utils)
 (modules cli_utils)
 )