(library
 (name auto_documentation)
 (modules ))

(library
 (name feature_update)
 (modules feature_update)
 (libraries core)
 )

(library
 (name feature_tree)
 (modules feature_tree)
 (libraries feature_update ds_utils))

(library
 (name ds_utils)
 (modules ds_utils)
 (libraries pretty_print core))

(library
 (name pretty_print)
 (modules pretty_print)
 )

(library
 (name code_tree)
 (modules code_tree)
 (libraries cli_utils feature_tree ds_utils))

(library
 (name cli_utils)
 (modules cli_utils)
 (libraries core core_unix.command_unix)
 )

(library
 (name os_utils)
 (modules os_utils)
 (libraries core core_unix.command_unix)
 )