(library
 (name auto_documentation)
 (modules ))

(library
 (name feature_update)
 (modules feature_update)
 (libraries core os_utils)
 (preprocess (pps ppx_jane))
 )

(library
 (name feature_tree)
 (modules feature_tree)
 (libraries feature_update ds_utils core)
 (preprocess (pps ppx_jane))
 )

(library
 (name ds_utils)
 (modules ds_utils)
 (libraries pretty_print core uri))

(library
 (name pretty_print)
 (modules pretty_print)
 )

(library
 (name code_tree)
 (modules code_tree)
 (libraries cli_utils feature_tree ds_utils)
 (preprocess (pps ppx_jane))
 )

(library
 (name cli_utils)
 (modules cli_utils)
 (libraries core core_unix.command_unix)
 )

(library
 (name os_utils)
 (modules os_utils)
 (libraries core core_unix.command_unix)
 )